# services/auth/cmd/server/docs/swagger.json
@@ -7,6 +7,40 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/auth/signin": {
+            "post": {
+                "description": "SignIn",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "SignIn",
+                "parameters": [
+                    {
+                        "description": "SignIn request body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.SignInReqBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "SignIn success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "invalid credentials",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/auth/signup": {
             "post": {
                 "description": "SingUp",
@@ -72,6 +106,23 @@
         }
     },
     "definitions": {
+        "auth.SignInReqBody": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 32,
+                    "minLength": 12
+                }
+            }
+        },
         "auth.SignUpReqBody": {
             "type": "object",
             "required": [
