# services/auth/internal/server/handlers/auth/handler.go
@@ -2,6 +2,7 @@ package auth
 
 import (
 	"errors"
+	"fmt"
 	_ "fmt"
 	"github.com/DanHerasymenko/GoDelivery/services/auth-service/internal/config"
 	"github.com/DanHerasymenko/GoDelivery/services/auth-service/internal/constants"
@@ -45,7 +46,13 @@ func (h *Handler) SingUp(ctx *gin.Context) {
 		return
 	}
 
-	user, err := h.services.Auth.CreateUser(ctx, reqBody.Email, reqBody.Password)
+	passHash, err := h.services.Auth.GeneratePasswordHash(reqBody.Password)
+	if err != nil {
+		response.AbortWithError(ctx, http.StatusInternalServerError, err)
+		return
+	}
+
+	user, err := h.services.Auth.CreateUser(ctx, reqBody.Email, passHash)
 	if errors.Is(err, constants.ErrUserAlreadyExists) || errors.Is(err, constants.ErrUserNotFound) {
 		response.AbortWithErrorJSON(ctx, http.StatusConflict, err, err.Error())
 		return
@@ -61,4 +68,47 @@ func (h *Handler) SingUp(ctx *gin.Context) {
 	//ctx.JSON(http.StatusOK, gin.H{
 	//	"message": "SingUp success",
 	//})
+}
+
+type SignInReqBody struct {
+	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=12,max=32"`
+}
+
+// @Summary SignIn
+// @Description SignIn
+// @Tags Auth
+// @Param body body SignInReqBody true "SignIn request body"
+// @Success 200 {string} string "SignIn success"
+// @Failure 401 {string} string "invalid credentials"
+// @Router /api/auth/signin [post]
+func (h *Handler) SignIn(ctx *gin.Context) {
+
+	reqBody := SignInReqBody{}
+
+	if err := validator.ParseReqBody(ctx, &reqBody); err != nil {
+		response.AbortWithErrorJSON(ctx, http.StatusBadRequest, err, "Email or password is invalid")
+		return
+	}
+
+	user, err := h.services.Auth.GetUserByEmail(ctx, reqBody.Email)
+	if errors.Is(err, constants.ErrUserNotFound) {
+		response.AbortWithErrorJSON(ctx, http.StatusUnauthorized, err, "Invalid credentials")
+		return
+	}
+
+	ok, err := h.services.Auth.ComparePasswordHashAndPassword(user.PasswordHash, reqBody.Password)
+	if err != nil {
+		response.AbortWithError(ctx, http.StatusInternalServerError, err)
+		return
+	}
+	if !ok {
+		response.AbortWithErrorJSON(ctx, http.StatusUnauthorized, fmt.Errorf("compare password = false"), "Invalid credentials")
+		return
+	}
+
+	ctx.JSON(http.StatusOK, gin.H{
+		"message": "SignIn success",
+		"user":    user,
+	})
 }
